k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: python-app
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
